--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <script type="text/javascript" src="build/js/app.js"></script>
   </head>
   <body>
-    <!-- GIVE ME SOME HTML, YO! -->
+    <div class="container">
+      <h1>WHAT?</h1>
+      <form id="form">
+        <label for="Search">What do you want to know?</label>
+        <input id="userInput" type="text" name="search">
+        <button type="submit" name="button">WHAT?</button>
+      </form>
+      <div class="output">
+        <!-- <img class="output" src="" alt="" /> -->
+      </div>
+    </div>
   </body>
 </html>
