add the most terrible code ive ever written in the CSS

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div class="container">
-      <h1>WHAT?</h1>
+      <div class="header">
+        <h1>WHAT?</h1>
+      </div>
       <form id="form">
-        <label for="Search">What do you want to know?</label>
         <input id="userInput" type="text" name="search">
         <button type="submit" name="button">WHAT?</button>
       </form>
       <div class="output">
-        <!-- <img class="output" src="" alt="" /> -->
       </div>
     </div>
   </body>
